src/snapshots/advent_2023__day2__tests__generator.snap
---
source: src/day2.rs
expression: generator(&INPUT)
---
[
    Game {
        id: 1,
        sets: [
            Set {
                red: 4,
                green: 0,
                blue: 3,
            },
            Set {
                red: 1,
                green: 2,
                blue: 6,
            },
            Set {
                red: 0,
                green: 2,
                blue: 0,
            },
        ],
    },
    Game {
        id: 2,
        sets: [
            Set {
                red: 0,
                green: 2,
                blue: 1,
            },
            Set {
                red: 1,
                green: 3,
                blue: 4,
            },
            Set {
                red: 0,
                green: 1,
                blue: 1,
            },
        ],
    },
    Game {
        id: 3,
        sets: [
            Set {
                red: 20,
                green: 8,
                blue: 6,
            },
            Set {
                red: 4,
                green: 13,
                blue: 5,
            },
            Set {
                red: 1,
                green: 5,
                blue: 0,
            },
        ],
    },
    Game {
        id: 4,
        sets: [
            Set {
                red: 3,
                green: 1,
                blue: 6,
            },
            Set {
                red: 6,
                green: 3,
                blue: 0,
            },
            Set {
                red: 14,
                green: 3,
                blue: 15,
            },
        ],
    },
    Game {
        id: 5,
        sets: [
            Set {
                red: 6,
                green: 3,
                blue: 1,
            },
            Set {
                red: 1,
                green: 2,
                blue: 2,
            },
        ],
    },
]
