src/snapshots/advent_2023__day2__tests__parse_game.snap
---
source: src/day2.rs
expression: "parse_game(\"Game 1: 3 blue, 4 red; 1 red, 2 green, 6 blue; 2 green\")"
---
Game {
    id: 1,
    sets: [
        Set {
            red: 4,
            green: 0,
            blue: 3,
        },
        Set {
            red: 1,
            green: 2,
            blue: 6,
        },
        Set {
            red: 0,
            green: 2,
            blue: 0,
        },
    ],
}
